--- a/GITStyle.css
+++ b/GITStyle.css
@@ -1,9 +1,9 @@
 p {
-align:left;
+text-align: center;
 width:250px;
 }
 
 body {
-	background-color: linear-gradient(to right, red , yellow);
+	background-color: pink;
 	text-align: center;
 }
